# Products/models/index.js
@@ -1,11 +1,0 @@
-const dbconfig = require('../config/db.config');
-const mongoose = require('mongoose');
-
-mongoose.Promise = global.Promise;
-
-const db = {};
-db.mongoose = mongoose;
-db.url = dbconfig.url;
-db.products = require('./products')(mongoose); 
-
-module.exports = db;
