# Products/routes/index.js
@@ -1,14 +1,0 @@
-const router = require('express').Router();
-const products = require('./products');
-
-router.use('/', require('./swagger'));
-
-router.use('/products', products);
-
-router.get('/', (req, res) => { 
-    //#swagger.tags=['Hello World']
-    res.send('Hello World')
-
-})
-
-module.exports = router;
